--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.10",
     "headlessui": "^0.0.0",
     "next": "latest",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0"
   },
