--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.10",
+    "fs": "^0.0.1-security",
     "headlessui": "^0.0.0",
     "next": "latest",
     "react": "18.2.0",
