--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.10",
     "fs": "^0.0.1-security",
     "headlessui": "^0.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.0",
     "next": "latest",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
